--- a/templates/api/v2/api_root.html
+++ b/templates/api/v2/api_root.html
@@ -126,21 +126,21 @@
 
 {% block content %}
     {% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li>
+    <div class="breadcrumb">
+        <div class="ml-1">
             <a href="/">{{brand.name}}</a>
             <span class="divider">&rsaquo;</span>
-        </li>
+        </div>
 
         {% for breadcrumb_name, breadcrumb_url in breadcrumblist %}
-            <li>
+            <div class="mx-1">
                 <a href="{{ breadcrumb_url }}" {% if forloop.last %}class="active"{% endif %}>{% if forloop.first %}API v2{% else %}{{ breadcrumb_name }}{% endif %}</a> {% if not forloop.last %}<span class="divider">&rsaquo;</span>{% endif %}
-            </li>
+            </div>
         {% endfor %}
 
         <li class="mr-4" style="flex-grow:1"></li>
         {% if api_token %}<li class="token" style="color: #666">API Token: {{ api_token }}</li>{% else %}<li class="pull-right">Log in to get your API Token</li>{% endif %}
-    </ul>
+    </div>
     {% endblock %}
 
     <!-- Content -->
@@ -150,7 +150,7 @@
         <div class="content-main">
             <div class="flex mb-8">
                 <div class="flex-grow page-title">{% if name == "Root" %}{{ brand.name }} API v2{% else %}{{ name }}{% endif %}</h1></div>
-                <a class="button-primary" href='{% url "api.v2.explorer" %}' style="margin-left: 10px">API Explorer</a>
+                <temba-button href='{% url "api.v2.explorer" %}' name="API Explorer"></temba-button>
             </div>
 
             {{ description }}
