--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -237,21 +237,11 @@
       %link{rel:'stylesheet', href:'https://fonts.googleapis.com/css?family=Roboto+Mono:300|Roboto:200,300,400,500'}
 
       -compress css
-        %link{type:'text/css', rel:'stylesheet', href:'{{ STATIC_URL }}bower/bootstrap-css/css/bootstrap.css',  media:'all' }
-
-
-      -compress css
         %link{type:'text/css', rel:'stylesheet', href:"{{ STATIC_URL }}fonts/icons/style.css", media:'all'}
+
+      -compress css
         %link{type:"text/css", rel:"stylesheet", href:"{{ STATIC_URL }}css/temba-components.css"}
-
-      -compress css
-
-        {% lessblock %}
-          :plain
-            @import "style.less";
-        {% endlessblock %}
-
-      -compress css
+        %link{rel:"stylesheet", href:"{{ STATIC_URL }}less/style.less", type:"text/less"}
         %link{rel:"stylesheet", href:"{{ STATIC_URL }}css/tailwind.css", type:"text/css"}
         %link{rel:"stylesheet", href:"{{ STATIC_URL }}less/refresh.less", type:"text/less"}
 
