--- a/templates/channels/types/twiml_api/claim.haml
+++ b/templates/channels/types/twiml_api/claim.haml
@@ -3,4 +3,4 @@
 
 -block pre-form
   -blocktrans trimmed
-    You can add a TwiML REST API as a channel using your TwiML instance.
+    You can add Somleng as a channel using your Somleng instance.
