--- a/templates/channels/types/twilio/claim.haml
+++ b/templates/channels/types/twilio/claim.haml
@@ -9,3 +9,11 @@
       %br
       %a{href:"https://www.twilio.com/help/faq/twilio-basics/how-does-twilios-free-trial-work"}
         -trans "Read more about the limits placed on Twilio's Free Trial numbers."
+
+  -if current_creds_account
+    .card.mt-6
+      -trans "Using account"
+      .text-lg.font-bold.inline-block.ml-2
+        {{current_creds_account}}
+      %a.inline-block.ml-4{href:'{% url "channels.types.twilio.connect" %}?reset_creds=reset&claim_type=twilio'}
+        -trans "Change"
