--- a/templates/channels/types/twilio_whatsapp/claim.haml
+++ b/templates/channels/types/twilio_whatsapp/claim.haml
@@ -13,6 +13,13 @@
         %a(href="https://www.twilio.com/help/faq/twilio-basics/how-does-twilios-free-trial-work")
           -trans "Read more about the limits placed on Twilio's Free Trial numbers."
 
+  -if current_creds_account
+    .card.mt-6
+      -trans "Using account"
+      .text-lg.font-bold.inline-block.ml-2
+        {{current_creds_account}}
+      %a.inline-block.ml-4{href:'{% url "channels.types.twilio.connect" %}?reset_creds=reset&claim_type=twilio_whatsapp'}
+        -trans "Change"
 
 -block numbers-search-form
 
