--- a/templates/public/public_welcome.haml
+++ b/templates/public/public_welcome.haml
@@ -25,8 +25,8 @@
 
   .mt-6
     .flex
-      .summary.card.p-12.overflow-hidden
-        .icon-flow.relative.text-gray-100(style="font-size:200px; transform: rotate(-5deg) translate(-120px, -40px);")
+      .summary.card.p-12.overflow-hidden.relative
+        %temba-icon.text-gray-100.absolute(name="flow" style="font-size:200px; transform: rotate(-5deg) translate(-120px, -40px);")
         .-mt-8.mx-20
           .title
             %a(href="{% url 'flows.flow_list' %}")
@@ -45,8 +45,8 @@
 
   -if 'success' in request.GET.keys
     .flex.mt-6
-      .summary.card.p-12.overflow-hidden
-        .icon-phone.relative.text-gray-100(style="font-size:160px; transform: rotate(25deg) translate(-40px, -10px);")
+      .summary.card.p-12.overflow-hidden.relative
+        %temba-icon.text-gray-100.absolute(name="contact" style="font-size:200px; transform: rotate(-5deg) translate(-120px, -40px);")
         .-mt-8.mx-20
           .title
             %a(href="{% url 'channels.channel_claim' %}")
@@ -66,8 +66,8 @@
                 -trans "Add Number"
 
   .flex.mt-6
-    .summary.card.p-12
-      .icon-contact.relative.text-gray-100(style="font-size:240px; transform: rotate(-5deg) translate(-180px, 0px);")
+    .summary.card.p-12.overflow-hidden.relative
+      %temba-icon.text-gray-100.absolute(name="contact" style="font-size:200px; transform: rotate(-5deg) translate(-120px, -40px);")
       .-mt-8.mx-20
         .title
           %a(href="{% url 'contacts.contact_list' %}")
@@ -100,9 +100,9 @@
               -trans "Create Group"
       
   .flex.mt-6
-    .summary.card.p-12.overflow-hidden
-      .icon-contact.relative.text-gray-100(style="font-size:240px; transform: rotate(-5deg) translate(-180px, 0px);")
-      .-mt-8.mx-20
+    .summary.card.p-12.overflow-hidden.relative
+      %temba-icon.text-gray-100.absolute.z-0(name="message" style="font-size:200px; transform: rotate(-5deg) translate(-100px, -40px);")
+      .-mt-8.mx-20.z-10.relative
         .title
           %a(href="{% url 'msgs.msg_inbox' %}")
             -trans "Messages"
@@ -122,8 +122,8 @@
               -trans "Send Message"
 
   .flex.mt-6
-    .summary.card.p-12.overflow-hidden
-      .icon-user.relative.text-gray-100(style="font-size:190px; transform: rotate(-5deg) translate(-100px, 20px);")
+    .summary.card.p-12.overflow-hidden.relative
+      %temba-icon.text-gray-100.absolute(name="workspace" style="font-size:200px; transform: rotate(-5deg) translate(-120px, -40px);")
       .-mt-8.mx-20
         .title
           %a(href="{% url 'orgs.org_workspace' %}")
