--- a/templates/channels/channel_read.haml
+++ b/templates/channels/channel_read.haml
@@ -44,7 +44,7 @@
         -for channel in delegates
           .lbl.linked(onclick="goto(event, this)" href="{% url 'channels.channel_read' channel.uuid %}")
             .flex.items-center
-              .text-base{class:'{{ channel|channel_icon }}'}
+              %temba-icon(name='{{ channel.type.get_icon }}')
               .name.mx-1
                 -if channel.is_delegate_sender
                   -trans "Bulk sending"
@@ -168,7 +168,7 @@
                     {{ channel.get_error_log_count|intcomma }}
                 %td.w-0.text-right
                   .inline-block
-                    %temba-icon(onclick="goto(event, this)" clickable="true" name="icon.log" href='{% url "channels.channellog_list" channel.uuid %}?others=1')
+                    %temba-icon(onclick="goto(event, this)" clickable="true" name="log" href='{% url "channels.channellog_list" channel.uuid %}?others=1')
 
 
       .card.pt-8.flex-shrink-0
