--- a/templates/channels/channellog.haml
+++ b/templates/channels/channellog.haml
@@ -7,10 +7,10 @@
   -for err in log.errors
     .p-4.shadow.bg-white.rounded-lg.my-4
       .entry.flex
-        %temba-icon.ml-2.mr-4(name="icon.error" style="--icon-color:rgb(var(--error-rgb))" size="1.5")
+        %temba-icon.ml-2.mr-4(name="error" style="--icon-color:rgb(var(--error-rgb))" size="1.5")
         .msg.flex-grow
           {{ err.message }}
           -if err.ref_url 
             .inline-block.align-middle.ml-1
               %a(href="{{ err.ref_url }}")
-                %temba-icon(name="icon.link" size="1")
+                %temba-icon(name="link" size="1")
