--- a/templates/includes/recipients.haml
+++ b/templates/includes/recipients.haml
@@ -29,6 +29,7 @@
     {{ urn|format_urn:user_org }}
 
 -if query
-  .item.query.lbl.linked.mr-2.mb-2(onclick="goto(event)" href="{% url 'contacts.contact_list' %}?search={{ query|urlencode }}")
-    .icon.icon-filter.text-dark-alpha-300.-mb-1
-    {{ query }}
+  .flex.item.query.lbl.linked.mr-2.mb-2(onclick="goto(event)" href="{% url 'contacts.contact_list' %}?search={{ query|urlencode }}")
+    %temba-icon.inline-block.text-dark-alpha-300.mr-1(name="filter")
+    .text
+      {{ query }}
