Add variables and mixins to legacy less styles

--- a/static/less/legacy.less
+++ b/static/less/legacy.less
@@ -8,6 +8,8 @@
 // main style.less file.
 //
 // *****************************************************
+@import "variables";
+@import "mixins";
 
 input {
   &#id_min_value {
