--- a/templates/no_nav.haml
+++ b/templates/no_nav.haml
@@ -13,8 +13,26 @@
     .content-card {
       margin: 4em;
     }
+
+    .alert {
+      background: #f7f7f7;
+      border: none;
+      color: rgba(0, 0, 0, 0.5);
+      text-shadow: none;
+      border-radius: 0px;
+      border-bottom: solid 1px #e2e2e2;
+      padding: 8px 22px;
+      margin: 0;
+      z-index: 10;
+      width: 100%;
+    }
   
 -block page-container
+  -if messages
+    -for msg in messages
+      %div{class:"alert alert-{{ message.tags }}"}
+        {{ msg }}
+
   .flex.flex-col.h-full  
     .top.flex-shrink.flex-grow
     .middle.flex.flex-row.mb-10
