Don't include brand variables in less node

--- a/templates/orgs/org_token.haml
+++ b/templates/orgs/org_token.haml
@@ -11,7 +11,7 @@
       .token
         API Token: <span id="api_token">{{api_token}}</span>
     
-      <a href="javascript:refreshToken()" class='api-token-refresh'><div class="icon-loop"></div></a>
+      <a href="javascript:refreshToken()" class='api-token-refresh'><temba-icon name="retry"></temba-icon></a>
 
 -block form-buttons
   
