--- a/templates/channels/types/twilio_messaging_service/claim.haml
+++ b/templates/channels/types/twilio_messaging_service/claim.haml
@@ -11,6 +11,15 @@
       After adding your Twilio Messaging Service SID we will provide you with the URL endpoint for Twilio to call
       when they want to push a message to {{ brand }}.
 
+  -if account_trial
+    %temba-alert.my-4(level="warning")
+      -blocktrans trimmed
+        You have connected a Twilio Trial Account which has some restrictions.
+      %br
+      %a{href:"https://www.twilio.com/help/faq/twilio-basics/how-does-twilios-free-trial-work"}
+        -trans "Read more about the limits placed on Twilio's Free Trial numbers."
+
+
   -if current_creds_account
     .card.mt-6
       -trans "Using account"
