- added front-end "delete selected" - unit test updates in progress

--- a/templates/triggers/trigger_list.haml
+++ b/templates/triggers/trigger_list.haml
@@ -3,6 +3,13 @@
 
 -block content
 
+  #pjax
+  -block pjax
+    -if org_perms.triggers.trigger_delete
+      %temba-dialog#delete-confirmation.hide(header='{{ _("Delete Selected Triggers")|escapejs }}' primaryButtonName='{{ _("Delete")|escapejs }}' destructive='true')
+        .p-6
+          -trans "Are you sure you want to delete the selected triggers? This cannot be undone."
+
   %form#search-form.mb-4(method="get" action="{{request.path}}")
     %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="search" value="{{search}}")
     -if request.REQUEST.status
@@ -94,4 +101,19 @@
       modal.header = '{{ _("Update Trigger")|escapejs }}';
       modal.open = true;
     }
+
+    {% if org_perms.triggers.trigger_delete %}
+    function onDeleteClicked(){
+      var deleteConfirmation = document.querySelector("#delete-confirmation");
+      deleteConfirmation.classList.remove("hide");
+      deleteConfirmation.open = true;
+
+      deleteConfirmation.addEventListener("temba-button-clicked", function(event){
+        if (!event.detail.button.secondary) {
+          runActionOnObjectRows("delete", wireTableListeners);
+        }
+        deleteConfirmation.open = false;
+      });
+    }
+    {% endif %}
     
