--- a/templates/channels/channel_claim_number.haml
+++ b/templates/channels/channel_claim_number.haml
@@ -14,7 +14,7 @@
       Once you connect a number you will immediately be able to send and receive messages. Contacts who send messages
       to your number will be charged according to their plan.
 
-  - block account-trial-warning
+  - block account-warning
 
   - block numbers-search-form
     .card.mt-6
