--- a/templates/channels/types/twilio_whatsapp/claim.haml
+++ b/templates/channels/types/twilio_whatsapp/claim.haml
@@ -3,7 +3,7 @@
 -load compress temba
 -load i18n
 
--block account-trial-warning
+-block account-warning
   -if account_trial
     %temba-alert.my-4(level="warning")
       - blocktrans trimmed
