--- a/templates/channels/types/twilio/claim.haml
+++ b/templates/channels/types/twilio/claim.haml
@@ -1,7 +1,7 @@
 -extends "channels/channel_claim_number.html"
 -load compress temba i18n
 
--block account-trial-warning
+-block account-warning
   -if account_trial
     %temba-alert.my-4(level="warning")
       -blocktrans trimmed
