--- a/templates/channels/types/vonage/claim.haml
+++ b/templates/channels/types/vonage/claim.haml
@@ -1,7 +1,7 @@
 -extends "channels/channel_claim_number.html"
 -load i18n
 
-- block account-trial-warning
+- block account-warning
   -if current_creds_account
     .card.mt-6
       -trans "Using account"
