Update labeling to use temba-checkbox and remove jQuery

--- a/static/less/style.less
+++ b/static/less/style.less
@@ -15,6 +15,9 @@
 pre {
   border-radius: 4px;
   border: 1px solid #f1f1f1;
+  word-break: break-word;
+  white-space: pre-wrap;
+
 }
 
 .prettyprint {
