--- a/templates/msgs/msg_outbox.haml
+++ b/templates/msgs/msg_outbox.haml
@@ -1,4 +1,4 @@
--extends "msgs/message_box_spa.html"
+-extends "msgs/message_box.html"
 -load smartmin sms temba contacts i18n humanize channels
 
 -block search-details
