--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -1,4 +1,4 @@
--extends "msgs/message_box_spa.html"
+-extends "msgs/message_box.html"
 -load smartmin sms temba compress i18n humanize
 
 -block title-icon
